RegressionTests/TestSuiteExport/reject/continue_outside_loop.blade
// EXPECT: fail
// DIAGNOSTICS: InvalidLoopControl

fn helper() {
    continue;
}

cog task main() {
}